--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,18 +1,15 @@
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
-<html>
+<html ng-app="silent-butterfly" ng-controller="AppCtrl">
     <head>
         <title>@title | Silent Butterfly </title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
     </head>
     <body>
-      @content
-
-
-
-      
-      <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+      @content 
+      <script src="@routes.Assets.at("javascripts/common.js")" type="text/javascript"></script>
+      <script src="@routes.Assets.at("javascripts/templates.js")" type="text/javascript"></script>
     </body>
 </html>
