--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html ng-app="silent-butterfly" ng-controller="AppCtrl">
     <head>
-        <title>@title | Silent Butterfly </title>
+      <title> {{pageTitle}} </title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
     </head>
